--- a/InvestmentReporting.TestService/Dockerfile
+++ b/InvestmentReporting.TestService/Dockerfile
@@ -1,8 +1,9 @@
-FROM mcr.microsoft.com/dotnet/runtime-deps:5.0.3-alpine3.13-arm64v8
+ARG CONTAINER_SUFFIX
+FROM mcr.microsoft.com/dotnet/runtime-deps:5.0.3-alpine3.13-$CONTAINER_SUFFIX
 
 EXPOSE 8083
 
-ADD bin/Debug/net5.0/linux-musl-arm64/publish publish
+ADD publish publish
 
 ENV ASPNETCORE_URLS=http://+:8083
 
