--- a/InvestmentReporting.TestService/Dockerfile
+++ b/InvestmentReporting.TestService/Dockerfile
@@ -1,5 +1,5 @@
 ARG DOTNET_IMAGE_SUFFIX
-FROM mcr.microsoft.com/dotnet/runtime-deps:5.0.3-alpine3.13-$DOTNET_IMAGE_SUFFIX
+FROM mcr.microsoft.com/dotnet/aspnet:5.0
 
 EXPOSE 8083
 
@@ -8,4 +8,4 @@ ADD publish publish
 ENV ASPNETCORE_URLS=http://+:8083
 
 WORKDIR ./publish
-ENTRYPOINT ["./InvestmentReporting.TestService"]
+ENTRYPOINT ["dotnet", "InvestmentReporting.TestService.dll"]
