--- a/InvestmentReporting.AuthService/Dockerfile
+++ b/InvestmentReporting.AuthService/Dockerfile
@@ -1,11 +1,11 @@
 ARG DOTNET_IMAGE_SUFFIX
 FROM mcr.microsoft.com/dotnet/runtime-deps:5.0.3-alpine3.13-$DOTNET_IMAGE_SUFFIX
 
-EXPOSE 8084
+EXPOSE 8083
 
 ADD publish publish
 
-ENV ASPNETCORE_URLS=http://+:8084
+ENV ASPNETCORE_URLS=http://+:8083
 
 WORKDIR ./publish
-ENTRYPOINT ["./InvestmentReporting.TestService"]
+ENTRYPOINT ["./InvestmentReporting.AuthService"]
