--- a/InvestmentReporting.AuthService/Properties/launchSettings.json
+++ b/InvestmentReporting.AuthService/Properties/launchSettings.json
@@ -1,10 +1,10 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "InvestmentReporting.TestService": {
+    "InvestmentReporting.AuthService": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "applicationUrl": "http://localhost:8084",
+      "applicationUrl": "http://localhost:8083",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
