Use shared key ring storage for cross-service auth

--- a/InvestmentReporting.AuthService/Dockerfile
+++ b/InvestmentReporting.AuthService/Dockerfile
@@ -3,9 +3,9 @@ FROM mcr.microsoft.com/dotnet/runtime-deps:5.0.3-alpine3.13-$DOTNET_IMAGE_SUFFIX
 
 EXPOSE 8083
 
-ADD publish publish
+ADD publish /publish
 
 ENV ASPNETCORE_URLS=http://+:8083
 
-WORKDIR ./publish
+WORKDIR /publish
 ENTRYPOINT ["./InvestmentReporting.AuthService"]
