Use tabs in frontend correctly

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -55,10 +55,15 @@
         "warn",
         "single"
       ],
+      "indent": [
+        "error",
+        "tab"
+      ],
       "prettier/prettier": [
         "warn",
         {
-          "singleQuote": true
+          "singleQuote": true,
+          "useTabs": true
         }
       ],
       "@typescript-eslint/explicit-module-boundary-types": "off"
