Replace repeated prefixes in services code with nginx configuration

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -9,11 +9,11 @@ server {
         try_files $uri $uri/ =404;
     }
 
-    location /api/auth/v1 {
-        proxy_pass http://auth-service:8083;
+    location /api/auth/v1/ {
+        proxy_pass http://auth-service:8083/;
     }
 
-    location /api/test/v1 {
-        proxy_pass http://test-service:8084;
+    location /api/test/v1/ {
+        proxy_pass http://test-service:8084/;
     }
 }
