Bootstrapping for invite service

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -13,7 +13,7 @@ server {
         proxy_pass http://auth-service:8083/;
     }
 
-    location /api/test/v1/ {
-        proxy_pass http://test-service:8084/;
+    location /api/invite/v1/ {
+        proxy_pass http://invite-service:8084/;
     }
 }
