--- a/InvestmentReporting.InviteService/InvestmentReporting.InviteService.csproj
+++ b/InvestmentReporting.InviteService/InvestmentReporting.InviteService.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AspNetCoreRateLimit" Version="3.2.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
