--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,7 +13,10 @@
     "vue-class-component": "^8.0.0-rc.1",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^4.0.4",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.16.1",
