--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "generate-api": "swagger-typescript-api"
   },
   "dependencies": {
     "core-js": "^3.9.1",
@@ -34,7 +35,8 @@
     "eslint-plugin-vue": "^7.7.0",
     "prettier": "^2.2.1",
     "typescript": "~4.2.2",
-    "postcss": "^8.1.0"
+    "postcss": "^8.1.0",
+    "swagger-typescript-api": "^7.0.0"
   },
   "eslintConfig": {
     "root": true,
