Bootstrapping state service (in-memory for beginning)

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -16,4 +16,8 @@ server {
     location /api/invite/v1/ {
         proxy_pass http://invite-service:8084/;
     }
+
+    location /api/state/v1/ {
+        proxy_pass http://state-service:8085/;
+    }
 }
