--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^4.0.4",
     "vuex": "^4.0.0",
+    "vuex-class": "^0.3.2",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1"
