--- a/InvestmentReporting.StateService/InvestmentReporting.StateService.csproj
+++ b/InvestmentReporting.StateService/InvestmentReporting.StateService.csproj
@@ -11,7 +11,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\InvestmentReporting.Data.Core\InvestmentReporting.Data.Core.csproj" />
-      <ProjectReference Include="..\InvestmentReporting.Data.InMemory\InvestmentReporting.Data.InMemory.csproj" />
+      <ProjectReference Include="..\InvestmentReporting.Data.Mongo\InvestmentReporting.Data.Mongo.csproj" />
       <ProjectReference Include="..\InvestmentReporting.Domain\InvestmentReporting.Domain.csproj" />
       <ProjectReference Include="..\InvestmentReporting.Shared\InvestmentReporting.Shared.csproj" />
     </ItemGroup>
