Bootstrapping import service

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -20,4 +20,8 @@ server {
     location /api/state/v1/ {
         proxy_pass http://state-service:8085/;
     }
+
+    location /api/import/v1/ {
+        proxy_pass http://import-service:8086/;
+    }
 }
