--- a/InvestmentReporting.Import/InvestmentReporting.Import.csproj
+++ b/InvestmentReporting.Import/InvestmentReporting.Import.csproj
@@ -5,4 +5,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\InvestmentReporting.Domain\InvestmentReporting.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
