Ignore unwanted files while publishing

--- a/InvestmentReporting.StateService/InvestmentReporting.StateService.csproj
+++ b/InvestmentReporting.StateService/InvestmentReporting.StateService.csproj
@@ -16,4 +16,8 @@
       <ProjectReference Include="..\InvestmentReporting.Shared\InvestmentReporting.Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Content Update="publish\**\*.*" CopyToPublishDirectory="Never" />
+    </ItemGroup>
+
 </Project>
