Basic import support on backend (only income for now)

--- a/InvestmentReporting.ImportService/InvestmentReporting.ImportService.csproj
+++ b/InvestmentReporting.ImportService/InvestmentReporting.ImportService.csproj
@@ -13,6 +13,7 @@
       <ProjectReference Include="..\InvestmentReporting.Data.Core\InvestmentReporting.Data.Core.csproj" />
       <ProjectReference Include="..\InvestmentReporting.Data.Mongo\InvestmentReporting.Data.Mongo.csproj" />
       <ProjectReference Include="..\InvestmentReporting.Domain\InvestmentReporting.Domain.csproj" />
+      <ProjectReference Include="..\InvestmentReporting.Import\InvestmentReporting.Import.csproj" />
       <ProjectReference Include="..\InvestmentReporting.Shared\InvestmentReporting.Shared.csproj" />
     </ItemGroup>
 
