--- a/InvestmentReporting.Import/InvestmentReporting.Import.csproj
+++ b/InvestmentReporting.Import/InvestmentReporting.Import.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\InvestmentReporting.Data.InMemory\InvestmentReporting.Data.InMemory.csproj" />
       <ProjectReference Include="..\InvestmentReporting.Domain\InvestmentReporting.Domain.csproj" />
     </ItemGroup>
 
