--- a/InvestmentReporting.Data.Mongo/InvestmentReporting.Data.Mongo.csproj
+++ b/InvestmentReporting.Data.Mongo/InvestmentReporting.Data.Mongo.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
       <PackageReference Include="MongoDB.Driver" Version="2.12.1" />
     </ItemGroup>
 
