--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     ports:
       - 8083:8083
     environment:
+      ASPNETCORE_ENVIRONMENT: Development
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
     volumes:
@@ -47,6 +48,7 @@ services:
         - DOTNET_IMAGE_SUFFIX
     container_name: invite-service
     environment:
+      ASPNETCORE_ENVIRONMENT: Development
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
     ports:
@@ -61,6 +63,7 @@ services:
         - DOTNET_IMAGE_SUFFIX
     container_name: state-service
     environment:
+      ASPNETCORE_ENVIRONMENT: Development
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
     ports:
@@ -75,6 +78,7 @@ services:
         - DOTNET_IMAGE_SUFFIX
     container_name: import-service
     environment:
+      ASPNETCORE_ENVIRONMENT: Development
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
     ports:
