--- a/InvestmentReporting.Data.InMemory/InvestmentReporting.Data.InMemory.csproj
+++ b/InvestmentReporting.Data.InMemory/InvestmentReporting.Data.InMemory.csproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\InvestmentReporting.Data.Core\InvestmentReporting.Data.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+    </ItemGroup>
+
 </Project>
