Parse dividends & coupons

--- a/InvestmentReporting.UnitTests/InvestmentReporting.UnitTests.csproj
+++ b/InvestmentReporting.UnitTests/InvestmentReporting.UnitTests.csproj
@@ -22,6 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Content Include="Samples\AlphaDirect_BrokerMoneyMove_CouponSample.xml" CopyToOutputDirectory="Always" />
       <Content Include="Samples\AlphaDirect_BrokerMoneyMove_DividendSample.xml" CopyToOutputDirectory="Always" />
       <Content Include="Samples\AlphaDirect_BrokerMoneyMove_ExpenseSample.xml" CopyToOutputDirectory="Always" />
       <Content Include="Samples\AlphaDirect_BrokerMoneyMove_IncomeSample.xml" CopyToOutputDirectory="Always" />
