First steps to integrate ClosedXML

--- a/InvestmentReporting.UnitTests/InvestmentReporting.UnitTests.csproj
+++ b/InvestmentReporting.UnitTests/InvestmentReporting.UnitTests.csproj
@@ -27,6 +27,7 @@
       <Content Include="Samples\AlphaDirect_BrokerMoneyMove_ExpenseSample.xml" CopyToOutputDirectory="Always" />
       <Content Include="Samples\AlphaDirect_BrokerMoneyMove_IncomeSample.xml" CopyToOutputDirectory="Always" />
       <Content Include="Samples\AlphaDirect_BrokerMoneyMove_BuySellAssetSample.xml" CopyToOutputDirectory="Always" />
+      <Content Include="Samples\Tinkoff_BrokerMoneyMove_IncomeSample.xlsx" CopyToOutputDirectory="Always" />
     </ItemGroup>
 
 </Project>
