--- a/InvestmentReporting.Import/InvestmentReporting.Import.csproj
+++ b/InvestmentReporting.Import/InvestmentReporting.Import.csproj
@@ -10,4 +10,9 @@
       <ProjectReference Include="..\InvestmentReporting.Domain\InvestmentReporting.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="ClosedXML" Version="0.95.4" />
+      <PackageReference Include="runtime.osx.10.10-x64.CoreCompat.System.Drawing" Version="5.8.64" />
+    </ItemGroup>
+
 </Project>
