--- a/InvestmentReporting.UnitTests/InvestmentReporting.UnitTests.csproj
+++ b/InvestmentReporting.UnitTests/InvestmentReporting.UnitTests.csproj
@@ -28,6 +28,7 @@
       <Content Include="Samples\AlphaDirect_BrokerMoneyMove_IncomeSample.xml" CopyToOutputDirectory="Always" />
       <Content Include="Samples\AlphaDirect_BrokerMoneyMove_BuySellAssetSample.xml" CopyToOutputDirectory="Always" />
       <Content Include="Samples\Tinkoff_BrokerMoneyMove_IncomeSample.xlsx" CopyToOutputDirectory="Always" />
+        <Content Include="Samples\Tinkoff_BrokerMoneyMove_ExpenseSample.xlsx" CopyToOutputDirectory="Always" />
     </ItemGroup>
 
 </Project>
