Bootstrapping for market service

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -24,4 +24,8 @@ server {
     location /api/import/v1/ {
         proxy_pass http://import-service:8086/;
     }
+
+    location /api/market/v1/ {
+        proxy_pass http://market-service:8086/;
+    }
 }
