--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -63,14 +63,17 @@
       ],
       "indent": [
         "error",
-        "tab"
+        "tab",
+        {
+          "SwitchCase": 1
+        }
       ],
       "prettier/prettier": [
         "warn",
         {
           "singleQuote": true,
           "useTabs": true,
-          "printWidth": 120
+          "printWidth": 160
         }
       ],
       "max-len": "off",
