Meta service bootstrapping

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -28,4 +28,8 @@ server {
     location /api/market/v1/ {
         proxy_pass http://market-service:8087/;
     }
+
+    location /api/meta/v1/ {
+        proxy_pass http://meta-service:8088/;
+    }
 }
