--- a/InvestmentReporting.Meta/InvestmentReporting.Meta.csproj
+++ b/InvestmentReporting.Meta/InvestmentReporting.Meta.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\InvestmentReporting.Domain\InvestmentReporting.Domain.csproj" />
+      <ProjectReference Include="..\InvestmentReporting.Market\InvestmentReporting.Market.csproj" />
     </ItemGroup>
 
     <ItemGroup>
