--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,7 +18,9 @@
     "vuex-class": "^0.3.2",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "chart.js": "^2.9.3",
+    "@types/chart.js": "^2.9.32"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.16.1",
