--- a/InvestmentReporting.Import.AlphaDirect/InvestmentReporting.Import.AlphaDirect.csproj
+++ b/InvestmentReporting.Import.AlphaDirect/InvestmentReporting.Import.AlphaDirect.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\InvestmentReporting.Data.InMemory\InvestmentReporting.Data.InMemory.csproj" />
+      <ProjectReference Include="..\InvestmentReporting.Import\InvestmentReporting.Import.csproj" />
       <ProjectReference Include="..\InvestmentReporting.State\InvestmentReporting.State.csproj" />
     </ItemGroup>
 
