Handle OFZ coupons properly for AlphaDirect importer

--- a/InvestmentReporting.UnitTests/InvestmentReporting.UnitTests.csproj
+++ b/InvestmentReporting.UnitTests/InvestmentReporting.UnitTests.csproj
@@ -27,6 +27,7 @@
 
     <ItemGroup>
       <Content Include="Samples\AlphaDirect_BrokerMoneyMove_CouponSample.xml" CopyToOutputDirectory="Always" />
+      <Content Include="Samples\AlphaDirect_BrokerMoneyMove_CouponSample2.xml" CopyToOutputDirectory="Always" />
       <Content Include="Samples\AlphaDirect_BrokerMoneyMove_DividendSample.xml" CopyToOutputDirectory="Always" />
       <Content Include="Samples\AlphaDirect_BrokerMoneyMove_ExpenseSample.xml" CopyToOutputDirectory="Always" />
       <Content Include="Samples\AlphaDirect_BrokerMoneyMove_IncomeSample.xml" CopyToOutputDirectory="Always" />
