--- a/.github/workflows/cover.yml
+++ b/.github/workflows/cover.yml
@@ -27,4 +27,4 @@ jobs:
       uses: coverallsapp/github-action@v1.1.1
       with:
         github-token: ${{secrets.GITHUB_TOKEN}}
-        path-to-lcov: ${{steps.coverlet.outputs.coverageFile}}
+        path-to-lcov: 'InvestmentReporting.UnitTests/lcov.info'
