--- a/.github/workflows/cover.yml
+++ b/.github/workflows/cover.yml
@@ -23,6 +23,7 @@ jobs:
         testProject: 'InvestmentReporting.UnitTests/InvestmentReporting.UnitTests.csproj'
         output: 'lcov.info'
         outputFormat: 'lcov'
+        excludes: '[InvestmentReporting.Data.*]*'
     - name: Upload coverage report
       uses: coverallsapp/github-action@v1.1.1
       with:
