Add bond support for Tinkoff importer

--- a/InvestmentReporting.UnitTests/InvestmentReporting.UnitTests.csproj
+++ b/InvestmentReporting.UnitTests/InvestmentReporting.UnitTests.csproj
@@ -40,6 +40,7 @@
       <Content Include="Samples\Tinkoff_BrokerMoneyMove_IncomeSample.xlsx" CopyToOutputDirectory="Always" />
       <Content Include="Samples\Tinkoff_BrokerMoneyMove_ExpenseSample.xlsx" CopyToOutputDirectory="Always" />
       <Content Include="Samples\Tinkoff_BrokerMoneyMove_BuySellAssetSample.xlsx" CopyToOutputDirectory="Always" />
+      <Content Include="Samples\Tinkoff_BrokerMoneyMove_CouponSample.xlsx" CopyToOutputDirectory="Always" />
     </ItemGroup>
 
 </Project>
